--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "remixicon": "^4.6.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
